--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@ layout: default
 title: Lee Taber
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>About Lee</h1>
+	<p>My research focus is on how interactions using technology can influence both the interactions and those interacting.</p>
+	<!-- wp:paragraph -->
+	<p>In particular, I am interested in better understanding how people present themselves on social media, how those choices can be viewed through the lens of personality, and how elements of the particular social media might influence those choices.</p>
+	<!-- /wp:paragraph -->
+	<p>In addition to this primary line of research, I am interested in:</p>
+	<ul id="block-f56a1aa7-4bae-4c5c-a309-a5fe337b48bf">
+		<li>ways to better present dense information in a terms of service document</li>
+		<li>lo-fi hip hop beats streaming stations, making tweaks to encourage people towards healthy behaviors, and the parasocial relationships that people develop online</li>
+		<li>creating a simulated social media in order to experimentally test hypotheses drawn from the primary line of research.</li></ul>
+	<p>My earliest research also involved&nbsp;what influences people to have a desire to "escape the self", understanding why people might irrationally hold on to things they no longer want, and how people used Myspace and Facebook messages to talk to deceased users.</p>
 </div><!-- /.blurb -->
