--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@ title: About Lee Taber
 ---
 <div class="blurb">
 	<h1>About Lee</h1>
+	<!-- wp:columns {"verticalAlignment":"top","align":"wide"} -->
+<div class="wp-block-columns alignwide are-vertically-aligned-top"><!-- wp:column {"width":"33.33%"} -->
+<div class="wp-block-column" style="flex-basis:33.33%"><!-- wp:image {"id":1887,"sizeSlug":"large","linkDestination":"none"} -->
+<figure class="wp-block-image size-large"><img src="https://leetaber.files.wordpress.com/2020/11/img_0260.jpg?w=768" alt="" class="wp-image-1887"/></figure>
+<!-- /wp:image --></div>
+<!-- /wp:column -->
+<!-- wp:column {"width":"66.66%"} -->
+<div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:paragraph -->
+<p>My research focus is on how interactions using technology can influence both the interactions and those interacting.</p>
 	<p>My research focus is on how interactions using technology can influence both the interactions and those interacting.</p>
 	<!-- wp:paragraph -->
 	<p>In particular, I am interested in better understanding how people present themselves on social media, how those choices can be viewed through the lens of personality, and how elements of the particular social media might influence those choices.</p>
