--- a/index.html
+++ b/index.html
@@ -1,26 +1,7 @@
 ---
-layout: default
-title: About Lee Taber
+# You don't need to edit this file, it's empty on purpose.
+# Edit theme's home layout instead if you wanna make some changes
+# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+layout: home
+author_profile: true
 ---
-<div class="blurb">
-	<h1>About Lee</h1>
-	<!-- wp:columns {"verticalAlignment":"top","align":"wide"} -->
-<div class="wp-block-columns alignwide are-vertically-aligned-top"><!-- wp:column {"width":"33.33%"} -->
-<div class="wp-block-column" style="flex-basis:33.33%"><!-- wp:image {"id":1887,"sizeSlug":"large","linkDestination":"none"} -->
-<figure class="wp-block-image size-large"><img src="https://leetaber.files.wordpress.com/2020/11/img_0260.jpg?w=768" alt="" class="wp-image-1887"/></figure>
-<!-- /wp:image --></div>
-<!-- /wp:column -->
-<!-- wp:column {"width":"66.66%"} -->
-<div class="wp-block-column" style="flex-basis:66.66%"><!-- wp:paragraph -->
-<p>My research focus is on how interactions using technology can influence both the interactions and those interacting.</p>
-	<p>My research focus is on how interactions using technology can influence both the interactions and those interacting.</p>
-	<!-- wp:paragraph -->
-	<p>In particular, I am interested in better understanding how people present themselves on social media, how those choices can be viewed through the lens of personality, and how elements of the particular social media might influence those choices.</p>
-	<!-- /wp:paragraph -->
-	<p>In addition to this primary line of research, I am interested in:</p>
-	<ul id="block-f56a1aa7-4bae-4c5c-a309-a5fe337b48bf">
-		<li>ways to better present dense information in a terms of service document</li>
-		<li>lo-fi hip hop beats streaming stations, making tweaks to encourage people towards healthy behaviors, and the parasocial relationships that people develop online</li>
-		<li>creating a simulated social media in order to experimentally test hypotheses drawn from the primary line of research.</li></ul>
-	<p>My earliest research also involved&nbsp;what influences people to have a desire to "escape the self", understanding why people might irrationally hold on to things they no longer want, and how people used Myspace and Facebook messages to talk to deceased users.</p>
-</div><!-- /.blurb -->
