Update to good enough version
Everything seems to work, the default is now set to my about page (though I should change it to some pictures or something to make it a bit flashier)

--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 # You don't need to edit this file, it's empty on purpose.
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
+#[LEE NOTE] Add some pictures or something here, it's a splash page, not the about section
 author_profile: true
 ---
+
+<p>My research focus is on how interactions using technology can influence both the interactions and those interacting.</p>
+
+<p>In particular, I am interested in better understanding how people present themselves on social media, how those choices can be viewed through the lens of personality, and how elements of the particular social media might influence those choices.</p>
+
+<p>In addition to this primary line of research, I am interested in:</p>
+<ul>
+  <li>ways to better present dense information in a terms of service document </li>
+  <li>lo-fi hip hop beats streaming stations, making tweaks to encourage people towards healthy behaviors, and the parasocial relationships that people develop online </li>
+  <li>creating a simulated social media in order to experimentally test hypotheses drawn from the primary line of research. </li>
+</ul>
+<p>My earliest research also involved what influences people to have a desire to "escape the self", understanding why people might irrationally hold on to things they no longer want, and how people used Myspace and Facebook messages to talk to deceased users. </p>
+
+<p>Contact me at ltaber@ucsc.edu or Twitter/Linkedin on the left</p>
