edits, tweaks and adding a video

--- a/_pages/currentResearch.html
+++ b/_pages/currentResearch.html
@@ -37,21 +37,18 @@ author_profile: true
 <h2>Terms of Service</h2>
 
 <ul>
-  <li>Terms of Service are notoriously long, boring, and overall difficult to read. We've tested different designs that identify potential areas of interest while reading, and that add interactivity to the binary accept/reject choice of terms of service.</li>
-  <img src="/assets/images/tos_highlight.jpg?w=750"/>
-  <li>The first design is using a user generated heat map of sentiment in order to help readers better understand a terms of service document.
+  <li>Terms of Service documents are notoriously long, boring, and overall difficult to read. We've tested different designs that identify potential areas of interest while reading, and that add interactivity to the binary accept/reject choice of Terms of Service.</li>
+  <img src="/assets/images/tos_highlight.jpg"/>
+  <li>The first design is using a user generated heat map of sentiment in order to help readers better understand a Terms of Service document.
     <ul>
-      <li>See examples of sentiment highlighting on 4 different ToS documents!
+      <li>See examples of sentiment highlighting on 4 different ToS documents!</li>
+      <li><a href="/static/facebook.html">Friendr</a>, <a href="/static/google.html">Hooli</a>, <a href="/static/amazonprimevideo.html">Acme Streaming</a>, <a href="/static/lyft">Ryde</a></li>
+    </ul>
+  </li>
+      <img src="/assets/images/tos_popup.jpg"/>
+      <li>The second design is using highlighting as well as a novel contract popup, which allows users to make selections within a Terms of Service. We anticipate this will increase user engagement with notoriously long and boring Terms of Service documents.
         <ul>
-          <li><a href="/static/facebook.html">Friendr</a>, <a href="/static/google.html">Hooli</a>, <a href="/static/amazonprimevideo.html">Acme Streaming</a>, <a href="/static/lyft">Ryde</a></li>
-        </ul>
-      </li>
-      </ul>
-    </li>
-      <img src="/assets/images/tos_popup.jpg?w=750"/>
-      <li>The second design is using highlighting as well as a novel contract popup, which allows users to make selections within a terms of service. We anticipate this will increase user engagement with notoriously long and boring terms of service documents.
-        <ul>
-          <li>See an example with Friendr here!</li>
+          <li>See an example with <a href="/assets/images/popup_demo.mp4">Friendr</a> here!</li>
         </ul>
       </li>
       </ul>
