--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -36,6 +36,12 @@ truman:
 <p>Click if you want to try <a href="https://truman.herokuapp.com/">Masks</a> or <a href="https://parasocial-truman.herokuapp.com/">Parasocial</a> yourself!</p>
 
 <h3>Terms of Service</h3>
-<p>Terms of Service are notoriously long, boring, and difficult to read. The goal of this project is to investigate interactive ways for people to quickly read and understand terms of service.  The second part uses pop-up sentences that allow the user to alter their account in the terms of service.  Click a picture to see an example!</p>
+<p>Terms of Service are notoriously long, boring, and difficult to read. The goal of this project is to investigate interactive ways for people to quickly read and understand Terms of Service documents.  The second part uses pop-up sentences that allow the user to alter their account in the Terms of Service.  Click a picture to see an example!</p>
 
 {% include gallery id="tos" caption="Highlighting, Popup, and Recognition Questions" %}
+
+<ul>
+  <li>See examples of sentiment highlighting on 4 different Terms of Service documents!</li>
+  <li><a href="/static/facebook.html">Friendr</a>, <a href="/static/google.html">Hooli</a>, <a href="/static/amazonprimevideo.html">Acme Streaming</a>, <a href="/static/lyft">Ryde</a></li>
+  <li>And a video of popup <a href="assets/images/popup_demo.mp4">here</a></li>
+</ul>
