--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -5,14 +5,14 @@ author_profile: true
 
 
 truman:
-  - url: /assets/images/Truman.jpg
-    image_path: /assets/images/Truman.jpg
+  - url: /assets/images/truman.jpg
+    image_path: /assets/images/truman.jpg
     alt: "Masks"
-    title: First is Masks, a proof of concept that asks people to identify characters based on personality traits.
+    title: Masks, a proof of concept that asks people to identify characters based on personality traits.
   - url: /assets/images/parasocial_influencer.jpg
     image_path: /assets/images/parasocial_influencer.jpg
     alt: "Parasocial"
-    title: Next is Parasocial, a small experiment on how people respond to an influencer-like character.
+    title: Parasocial, a small experiment on how people respond to an influencer-like character.
 tos:
   - url: /assets/images/tos_highlight.jpg
     image_path: /assets/images/tos_highlight.jpg
@@ -30,8 +30,10 @@ tos:
 
 <p class="has-text-align-center"><strong>Projects in Computational Media</strong></p>
 
-<h3>Truman Social Media</h3>
-<p>This project creates simulated social media spaces, where the user is the only real person in the space. </p>
+<h3>Truman Social Media Projects</h3>
+<p>I built simulated social media spaces for this series of projects, where the user is the only real person in the space. </p>
+<p>The first is called Masks. Based on research on how people exhibit OCEAN traits on social media, I've attempted to create personas for each pole of OCEAN traits. The goal of the simulation is to identify which users have which "masks".<p>
+<p>The second is called Parasocial. It is a short experiment, using research on how people form parasocial relationships with social media users, to create two versions of a character named Kelly. One version acts more like an influencer, while the other is more authentic. Users of this system read posts from Kelly and note their reactions using a survey.<p>
 {% include gallery id="truman" caption="Example Truman Spaces" %}
 <p>Click if you want to try <a href="https://truman.herokuapp.com/">Masks</a> or <a href="https://parasocial-truman.herokuapp.com/">Parasocial</a> yourself!</p>
 
