adding alt text to pictures

--- a/_pages/currentResearch.html
+++ b/_pages/currentResearch.html
@@ -5,18 +5,18 @@ author_profile: true
 ---
 
 <h2>Cats, Kids, and Video Calls: Investigation into Texting and Video Personality During COVID-19</h2>
-<img src="/assets/images/videocall.png" alt=""/>
+<img src="/assets/images/videocall.png" alt="A cartoon monitor with six people in a video call"/>
 <ul>
   <li>We asked students pre-COVID-19 how they present themselves on video calls and texting. We then compare to how students and office workers are now using video calls and texting during COVID-19 in order to investigate changes in self-presentation</li>
   <li>Analysis is ongoing!</li>
 </ul>
 
 <h2>Lo-Fi Beats and Parasocial Relationships</h2>
-<img src="/assets/images/lofihiphop.jpeg?w=750" alt=""/>
+<img src="/assets/images/lofihiphop.jpeg?w=750" alt="A cartoon girl wearing headphones while studying"/>
 <li>I am looking at how people use the Lo-Fi beats live-streams, how viewers form connections with the animation, and what effects the music might have on concentration.</li><li>Read the article <a href="https://dl.acm.org/doi/10.1145/3372042?cid=99659260509">here</a>!</li></ul>
 
 <h2>Masks: A Simulated Social Media</h2>
-<img src="/assets/images/truman.jpg?w=750" alt=""/>
+<img src="/assets/images/truman.jpg?w=750" alt="A post from a fake social media site. There is a photo and two comments below it that are all generated from actors"/>
 <ul>
   <li>I've created a simulated social media using the Truman system detailed <a href="https://github.com/cornellsml/truman">here</a>.</li>
   <li>Based on research on how people exhibit OCEAN traits on social media, I've attempted to create personas for each pole of OCEAN traits. The goal of the simulation is to identify which users have which "masks".</li>
@@ -38,14 +38,14 @@ author_profile: true
 
 <ul>
   <li>Terms of Service documents are notoriously long, boring, and overall difficult to read. We've tested different designs that identify potential areas of interest while reading, and that add interactivity to the binary accept/reject choice of Terms of Service.</li>
-  <img src="/assets/images/tos_highlight.jpg"/>
+  <img src="/assets/images/tos_highlight.jpg" alt="A picture from a terms of service document. Several sentences are highlighted with green or red highlights"/>
   <li>The first design is using a user generated heat map of sentiment in order to help readers better understand a Terms of Service document.
     <ul>
       <li>See examples of sentiment highlighting on 4 different ToS documents!</li>
       <li><a href="/static/facebook.html">Friendr</a>, <a href="/static/google.html">Hooli</a>, <a href="/static/amazonprimevideo.html">Acme Streaming</a>, <a href="/static/lyft">Ryde</a></li>
     </ul>
   </li>
-      <img src="/assets/images/tos_popup.jpg"/>
+      <img src="/assets/images/tos_popup.jpg" alt="A picture of a constructed terms of service document. There are blue links that, when clicked, lanuch a popup that asks if the user would like to change that portion of the terms"/>
       <li>The second design is using highlighting as well as a novel contract popup, which allows users to make selections within a Terms of Service. We anticipate this will increase user engagement with notoriously long and boring Terms of Service documents.
         <ul>
           <li>See an example with <a href="/assets/images/popup_demo.mp4">Friendr</a> here!</li>
