Update for new pub NFW

--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -3,6 +3,8 @@ title: "CV"
 permalink: /cv/
 author_profile: true
 ---
+<h2>Journal</h2>
+<p><strong>Taber, L.</strong>, Dominguez, S., & Whittaker, S. (2021). Cats, Kids, and video calls: how working from home affects media self-presentation. <em>Human–Computer Interaction</em>, 1-26. Retrieve Version of Record from <a href="https://dl.acm.org/doi/10.1145/3372042?cid=99659260509">here</a>, post-print from <a href="/assets/pubs/Cats_Kids_Video_Calls_Post_Print.pdf">here</a></p>
 
 <h2>Conference</h2>
 <p><strong>Taber, L.</strong>, Whittaker, S. (2020) "'On Finsta I can say ‘Hail Satan'": Being Authentic but Disagreeable on Instagram. In <em>Proceedings of the 2020 CHI Conference on Human Factors in Computing Systems </em>(p. ). ACM. Received an Honorable Mention Award from CHI 2020. Retrieve from <a href="https://dl.acm.org/doi/10.1145/3313831.3376182?cid=99659260509">here</a>. Video presentation hosted <a href="https://www.youtube.com/watch?v=KMa1qB6zosM">here</a></p>
