--- a/_pages/currentResearch.html
+++ b/_pages/currentResearch.html
@@ -7,7 +7,7 @@ author_profile: true
 <h2>Cats, Kids, and Video Calls: How Working from Home Affects Media Self-Presentation</h2>
 <img src="/assets/images/videocall.png" alt="A cartoon monitor with six people in a video call"/>
 <ul>
-  <li>We asked students pre-COVID-19 how they present themselves on video calls\. We then compare to how students and office workers are now using video calls during COVID-19 in order to investigate changes in self-presentation</li>
+  <li>We asked students pre-COVID-19 how they present themselves on video calls. We then compare to how students and office workers are now using video calls during COVID-19 in order to investigate changes in self-presentation</li>
   <li>Version of Record <a href="https://dl.acm.org/doi/10.1145/3372042?cid=99659260509">here</a>.</li>
   <li>Post-Print <a href="/assets/pubs/Cats_Kids_Video_Calls_Post_Print.pdf">here</a>.</li>
 </ul>
