--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -4,7 +4,7 @@ permalink: /cv/
 author_profile: true
 ---
 <h2>Journal</h2>
-<p><strong>Taber, L.</strong>, Dominguez, S., & Whittaker, S. (2021). Cats, Kids, and Video Calls: How Working from Home Affects Media Self-Presentation. <em>Human–Computer Interaction</em>, 1-26. Retrieve Version of Record from <a href="https://dl.acm.org/doi/10.1145/3372042?cid=99659260509">here</a>, post-print from <a href="/assets/pubs/Cats_Kids_Video_Calls_Post_Print.pdf">here</a></p>
+<p><strong>Taber, L.</strong>, Dominguez, S., & Whittaker, S. (2021). Cats, Kids, and Video Calls: How Working from Home Affects Media Self-Presentation. <em>Human–Computer Interaction</em>, 1-26. Retrieve Version of Record from <a href="https://www.tandfonline.com/doi/full/10.1080/07370024.2021.1970557">here</a>, post-print from <a href="/assets/pubs/Cats_Kids_Video_Calls_Post_Print.pdf">here</a></p>
 
 <h2>Conference</h2>
 <p>Nanavati, A.*, Walker, N.*, <strong>Taber, L.</strong>, Mavrogiannis, C., Takayama, L., Cakmak, M., Srinivasa, S. (2022). Not All Who Wander Are Lost: A Localization-Free System for In-the-Wild Mobile Robot Deployments. In Proceedings of the 2022 Human Robotic Interaction (HRI) Conference. ACM/IEEE. </p>
