added wandering robot info and picture

--- a/_pages/currentResearch.html
+++ b/_pages/currentResearch.html
@@ -4,12 +4,18 @@ permalink: /current/
 author_profile: true
 ---
 
+<h2>Not All Who Wander Are Lost: A Localization-Free System for In-the-Wild Mobile Robot Deployments</h2>
+<img src= "/assers/images/kuribot_demo.png" alt="A slack message from Kuribot which is presenting the user with a photo the bot has taken. The bot is asking the user for feedback about the photo"/>
+<ul>
+  <li>I worked with Ph.D. students at University of Washington to develop and delpoy a scenario to trial a wandering based style of movement for mobile robots</li>
+  <li>See the paper <a href="https://personalrobotics.cs.washington.edu/publications/nanavati2022localizationfree.pdf">here</a>.</li>
+</ul>
+
 <h2>Cats, Kids, and Video Calls: How Working from Home Affects Media Self-Presentation</h2>
 <img src="/assets/images/videocall.png" alt="A cartoon monitor with six people in a video call"/>
 <ul>
   <li>We asked students pre-COVID-19 how they present themselves on video calls. We then compare to how students and office workers are now using video calls during COVID-19 in order to investigate changes in self-presentation</li>
-  <li>Version of Record <a href="https://dl.acm.org/doi/10.1145/3372042?cid=99659260509">here</a>.</li>
-  <li>Post-Print <a href="/assets/pubs/Cats_Kids_Video_Calls_Post_Print.pdf">here</a>.</li>
+  <li>Version of Record <a href="https://www.tandfonline.com/doi/full/10.1080/07370024.2021.1970557">here</a>.</li>
 </ul>
 
 <h2>Lo-Fi Beats and Parasocial Relationships</h2>
