--- a/_pages/currentResearch.html
+++ b/_pages/currentResearch.html
@@ -3,11 +3,18 @@ title: "Current research"
 permalink: /current/
 author_profile: true
 ---
+<h2>TrumanGram: Understanding How People Interpret Personality Through Instagram Profiles</h2>
+<img src="/assets/images/trumangram.jpg">
+<ul>
+  <li>This is a two part project, with part 1 being a qualitative study examining how people present themselves on Instagram.</li>
+  <li>Part 2 is a simulation of Instagram that I built, to understand how other people interpret Instagram profiles</li>
+  <li>Work is still ongoing, but you can take a look for yourself! <a href="https://trumangram.herokuapp.com/users/Test_Username_1">here</a></li>
+</ul>
 
 <h2>Not All Who Wander Are Lost: A Localization-Free System for In-the-Wild Mobile Robot Deployments</h2>
 <img src= "/assets/images/kuribot_demo.png" alt="A slack message from Kuribot which is presenting the user with a photo the bot has taken. The bot is asking the user for feedback about the photo"/>
 <ul>
-  <li>I worked with Ph.D. students at University of Washington to develop and delpoy a scenario to trial a wandering based style of movement for mobile robots</li>
+  <li>I worked with Ph.D. students at University of Washington to develop and deploy a scenario to trial a wandering based style of movement for mobile robots</li>
   <li>See the paper <a href="https://personalrobotics.cs.washington.edu/publications/nanavati2022localizationfree.pdf">here</a>.</li>
 </ul>
 
