--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -3,6 +3,8 @@ title: "CV"
 permalink: /cv/
 author_profile: true
 ---
+Retrieve resume from <a href="https://site.leetaber.com/assets/pubs/l_taber_resume.pdf">here</a>
+
 <h2>Journal</h2>
 <p><strong>Taber, L.</strong>, Dominguez, S., & Whittaker, S. (2021). Cats, Kids, and Video Calls: How Working from Home Affects Media Self-Presentation. <em>Human–Computer Interaction</em>, 1-26. Retrieve Version of Record from <a href="https://www.tandfonline.com/doi/full/10.1080/07370024.2021.1970557">here</a></p>
 
